fix: add alternate alignment on work and menu animation

--- a/src/styles/partials/about.styl
+++ b/src/styles/partials/about.styl
@@ -1,6 +1,6 @@
 
 #about
-  padding-bottom: $spacing.xhg
+  padding-bottom: $spacing.xxhg
   img
     margin-bottom: $spacing.xhg
 
